# data_cleaning_openenv

data_cleaning_v2/: Dockerfile  README.md  demo.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
data_cleaning_v2/app/: hf_space_demo.py
data_cleaning_v2/data/: cleaned_ground_truth.csv  noisy_dataset.csv
data_cleaning_v2/env/: __init__.py  cleaning_env.py  rules.py  scorer.py
data_cleaning_v2/server/: app.py
