[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "Customer Records Cleaning OpenEnv"
authors = [
    { name = "tecsom" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0",
    "openai>=1.35.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
server = "main:app"

[tool.setuptools]
packages = ["env", "app"]
